Fixing jumpy animation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -133,6 +133,7 @@ $easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
 		transform: translateX(-100%);
 	}
 	to {
+		left: 0;
 		transform: translateX(calc(100vw + 100%));
 	}
 }
